Enumerate dataSource on OAS
